--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "repository": {},
   "license": "UNLICENSED",
   "dependencies": {
+    "@deck.gl/core": "^8.8.1",
+    "@luma.gl/constants": "^8.5.14",
     "@remotion/cli": "^3.0.0",
     "@remotion/eslint-config": "^3.0.0",
+    "d3": "^7.5.0",
+    "deck.gl": "^8.8.1",
     "eslint": "^8.14.0",
+    "lodash.throttle": "^4.1.1",
+    "mapbox-gl": "^2.9.1",
     "prettier": "^2.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-map-gl": "^5.0.0",
     "remotion": "^3.0.0",
     "typescript": "^4.6.3"
   },
