--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
 		"module": "commonjs",
 		"jsx": "react-jsx",
 		"outDir": "./dist",
-		"strict": true,
+		"strict": false,
 		"noEmit": true,
 		"lib": ["es2015"],
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true
 	}
 }
