--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "animate-deck-gl",
-  "version": "1.0.0",
-  "description": "My Remotion video",
-  "scripts": {
-    "start": "remotion preview src/index.tsx",
-    "build": "remotion render src/index.tsx MapAnimation out/video.mp4",
-    "upgrade": "remotion upgrade",
-    "test": "eslint src --ext ts,tsx,js,jsx && tsc"
-  },
-  "repository": {},
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@deck.gl/core": "^8.8.1",
-    "@luma.gl/constants": "^8.5.14",
-    "@remotion/cli": "^3.0.0",
-    "@remotion/eslint-config": "^3.0.0",
-    "animejs": "^3.2.1",
-    "d3": "^7.5.0",
-    "deck.gl": "^8.8.1",
-    "eslint": "^8.14.0",
-    "lodash.throttle": "^4.1.1",
-    "mapbox-gl": "^2.9.1",
-    "prettier": "^2.2.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-map-gl": "^5.0.0",
-    "remotion": "^3.0.0",
-    "typescript": "^4.6.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.6",
-    "@types/web": "^0.0.61"
-  }
+	"name": "animate-deck-gl",
+	"version": "1.0.0",
+	"description": "My Remotion video",
+	"scripts": {
+		"start": "remotion preview src/index.tsx",
+		"build": "remotion render src/index.tsx MapAnimation out/video.mp4",
+		"upgrade": "remotion upgrade",
+		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
+	},
+	"repository": {},
+	"license": "UNLICENSED",
+	"dependencies": {
+		"@deck.gl/core": "^8.8.1",
+		"@luma.gl/constants": "^8.5.14",
+		"remotion": "4.0.10",
+		"@remotion/cli": "4.0.10",
+		"@remotion/eslint-config": "4.0.10",
+		"animejs": "^3.2.1",
+		"d3": "^7.5.0",
+		"deck.gl": "^8.8.1",
+		"eslint": "^8.14.0",
+		"lodash.throttle": "^4.1.1",
+		"mapbox-gl": "^2.9.1",
+		"prettier": "^2.2.1",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-map-gl": "^5.0.0",
+		"typescript": "^4.6.3"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.6",
+		"@types/web": "^0.0.61"
+	}
 }
